2009-09-08 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:
	* configure:
	* config.mak.in:
	* Source/GNUmakefile:
	Attempt to tidy up config now that pthreads are mandatory.
	* Source/NSThread.m:
	Fix various bugs related to thread exit,  Prevent crashes at program
	termination ...nastily obvious on mingw.
	* Source/Additions/GSLock.m:
	Remove -dealloc implementations which called -finalize, since the
	superclass implementationd does that too, and finalizing twice is
	a bad, bad thing.

2009-09-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSConnection.h:
	* Source/NSConnection.m:
	Remove ivars from public header.
	Improve debug by reporting the connections's registered name and/or
	the name of the remote port it is connecting to.

2009-09-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m:
	* Source/GSRunLoopCtxt.h:
	Add some logging to help debug problems where code is adding too
	many events into a run loop.

2009-09-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLock.m: Fix the ([-tryLock]) and [(-lockBeforeDate:])
	implementations for NSLock and NSCondictionLock to return NO for
	recursive locking.  Fix to only initialise mutex attributes once
	(to avoid leaking a set of attributes with every lock created on
	platforms where attributes need to be destroyed when no longer used).
	Reorganise to make it easy to replace method implementations.
	Fix for bug #25444 ... OSX compatibility change.

2009-09-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: Fix for rare problem if someone changes the
	system time backwards.
	* configure.ac: Check for pthread.h and type sizes.  Insist on having
	pthread.h in order to build, now that it is a requirement.
	* configure: Regenerate
	* Headers/Additions/GNUstepBase/GSConfig.h.in: Declare abstract types.
	* Source/NSLock.m: including pthread.h
	* Headers/Foundation/NSLock.h: Avoid including pthread.h